test_scores/negative_dimers/features/P19878.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P19878.pkl.xz